--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ h1, .scene-number {
     margin-bottom: 1rem;
 }
 .caption p {
-    margin: 0;
+    margin: 10%;
     font-size: 1rem;
     line-height: 1.6;
     color: #bbb;
